[package]
name = "advent-of-rust-2020"
version = "0.1.0"
authors = ["Borja Garcia Gonzalez <debuti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#piston_window = "0.116.0"

[profile.dev]
opt-level = 3 # Optimize to down the 5 seconds to 0.3 seconds
